<resources>
    <string name="app_name">MovieTime</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="vote_average">Vote Average</string>
    <string name="overview">Overview</string>
    <string name="language">Language</string>
    <string name="release_date">Release Date</string>
    <string name="genres">Genres</string>
    <string name="setting_language">setting language</string>
    <string name="favorite">favorite</string>
    <string name="info_deleted">deleted from favorite</string>
    <string name="info_added">Added to Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="my_favorite">my favorite</string>
    <string name="empty_favorite">empty_favorite</string>
    <string name="setting_notification">setting notification</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="info_daily">will give a notification every morning at 8</string>
    <string name="release_movie_reminder">Release Movie Reminder</string>
    <string name="info_release">will give a notification when there is a release film</string>
    <string name="notif_release_content_title">Release Movie Today Notification Reminder</string>
    <string name="notif_release_content_text">There are no movie release today</string>
    <string name="notif_release_content_text_movie">Movie %s Has Been Release</string>
    <string name="notif_daily_content_title">Daily Notification Reminder</string>
    <string name="notif_daily_content_text">Movie time is always missing you</string>
    <string name="notif_daily_setup">Daily Notification Reminder is %s</string>
    <string name="notif_release_setup">Release Movie Notification Reminder is %s</string>
</resources>
